[package]
name = "rust"
version = "0.1.0"
authors = ["Philip Koslowski <philip.koslowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.76"
rand = "0.7.3"

[lib]
name = "rustcalc"
crate-type = ["staticlib"]
